--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^29.2.0",
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "sweetalert2": "^11.1.4"
     }
 }
