--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "livewire/livewire": "^2.5",
+        "symfony/process": "^5.3",
         "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
