--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^29.2.0",
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "dropzone": "^5.9.3",
         "sweetalert2": "^11.1.4"
     }
 }
